# world-currency-converter

./: .env  .env.test  .gitignore  Cargo.toml  DEVELOPER_UPDATE.md  LICENSE  README.md  SETUP.md  TESING_GUIDE.md  UPGRADE_PLAN.md  file_folder_structure.txt  test.txt  test_currency_api.sh  test_currency_api.txt
.archive/: test.txt  test.txt_2  test.txt_old
DOCS/: DEVELOPER_UPDATE_v0.0.1.md  SETUP.md  UPGRADE_PLAN_v0.0.1.md
DOCS/v0.0.2/: UPGRADE_PLAN.md
config/: country_currencies.json
config/backups/: country_currencies_20241130_122828.json  country_currencies_20241130_123858.json  country_currencies_20241130_124024.json  country_currencies_20241130_205359.json  country_currencies_20241130_210635.json  country_currencies_20241130_210636.json  country_currencies_20241201_014907.json  country_currencies_20241201_034424.json  country_currencies_20241201_034425.json  country_currencies_20241201_171519.json  country_currencies_20241201_183351.json  country_currencies_20241201_183352.json  country_currencies_20241201_183402.json  country_currencies_20241201_232313.json  country_currencies_20241201_232314.json  country_currencies_20241202_102928.json  country_currencies_20241202_103002.json  country_currencies_20241202_103003.json
config/test/: country_currencies.json
src/: cache.rs  config.rs  currency_data.rs  currency_manager.rs  currency_service.rs  data.rs  errors.rs  handlers.rs  handlers_v1.rs  lib copy.rs  lib.rs  main.rs  models.rs  monitor.rs  rate_limit.rs  registry.rs  update_service.rs
tests/: api.rs  currency_api_tests.rs  health.rs
(+10 files in other folders)
