[package]
name = "currency-converter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
env_logger = "0.11.2"
log = "0.4.21"
dotenv = "0.15.0"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4"] }
urlencoding = "2.1.3"
once_cell = "1.19.0"
thiserror = "2.0.3"
async-trait = "0.1.77"
colored = "2.0"
lazy_static = "1.4"
futures = "0.3"

[dev-dependencies]
actix-rt = "2.9.0"
tokio-test = "0.4.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde_json = "1.0.114"
chrono = { version = "0.4.35", features = ["serde"] }
tokio = { version = "1.36.0", features = ["full"] }
actix-web = "4.5.1"
futures = "0.3"

[features]
default = ["test-utils"]
test-utils = []